--- a/index.html
+++ b/index.html
@@ -25,118 +25,113 @@
 
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
         It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p><br>
-    <a href="service.html">Service page</a><br>
-    <a href="https://www.flipkart.com/">Flipkart</a><br>
-    <a href="https://www.amazon.in/">Amazon</a><br><br>
+        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <div class="link-align">
+        <a href="service.html">Service page</a>
+        <a href="https://www.flipkart.com/">Flipkart</a>
+        <a href="https://www.amazon.in/">Amazon</a>
+    </div>
+
     <img src="./assets/Car image.png" alt="car image" width="500"/><br>
+
     <audio controls>
         <source src="assets/audio-club-edyn-343275.mp3" type="audio/mp3">
     </audio><br>
     <video controls width="50%">
         <source src="assets/bmw.mp4" type="video/mp4"> 
-    </video><br><br>
+    </video>
 
-    <table>
-        <tr>
-            <th>S.No</th>
-            <th>Name</th>
-            <th>Internal1 Mark</th>
-            <th>Internael2 Mark</th>
-            <th>Best of One</th>
-            <th>Externel Mark</th>
-            <th>Total</th>
-        </tr>
-        <tr>
+    <table class="table">
+        <caption>Stock Overview</caption>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Item</th>
+            <th>Category</th>
+            <th>Quantity</th>
+            <th>Unit Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
             <td>1</td>
-            <td>Azeeamth Marziya</td>
-            <td>23</td>
-            <td>22</td>
-            <td>23</td>
-            <td>64</td>
-            <td>87</td>
-        </tr>
-        <tr>
+            <td>Apples</td>
+            <td>Fruit</td>
+            <td>35</td>
+            <td>$1.20</td>
+          </tr>
+
+          <tr>
             <td>2</td>
-            <td>Aathi Lakshmi</td>
-            <td>22</td>
-            <td>24</td>
-            <td>24</td>
-            <td>56</td>
-            <td>80</td>
-        </tr>
-        <tr>
+            <td>Bananas</td>
+            <td>Fruit</td>
+            <td>42</td>
+            <td>$0.50</td>
+          </tr>   
+
+          <tr>
             <td>3</td>
-            <td>Najmun Nisha</td>
-            <td>21</td>
-            <td>22</td>
-            <td>22</td>
-            <td>60</td>
-            <td>82</td>
-        </tr>
-        <tr>
+            <td>Broccoli</td>
+            <td>Vegetable</td>
+            <td>18</td>
+            <td>$1.10</td>
+          </tr>
+
+          <tr>
             <td>4</td>
-            <td>Nejimath Nisha</td>
-            <td>20</td>
-            <td>22</td>
-            <td>22</td>
-            <td>66</td>
-            <td>88</td>
-        </tr>
-        <tr>
+            <td>Carrots</td>
+            <td>Vegetable</td>
+            <td>27</td>
+            <td>$0.80</td>
+          </tr>
+          
+          <tr>
             <td>5</td>
-            <td>Rufana</td>
-            <td>21</td>
-            <td>22</td>
-            <td>22</td>
-            <td>59</td>
-            <td>81</td>
-        </tr>
-        <tr>
+            <td>Milk (1L)</td>
+            <td>Dairy</td>
+            <td>20</td>
+            <td>$1.40</td>
+          </tr>
+
+          <tr>
             <td>6</td>
-            <td>Priyanka</td>
-            <td>24</td>
-            <td>22</td>
-            <td>24</td>
-            <td>58</td>
-            <td>80</td>
-        </tr>
-        <tr>
+            <td>Yogurt</td>
+            <td>Dairy</td>
+            <td>16</td>
+            <td>$0.90</td>
+          </tr>
+
+          <tr>
             <td>7</td>
-            <td>Panchali</td>
-            <td>23</td>
-            <td>22</td>
-            <td>23</td>
-            <td>64</td>
-            <td>87</td>
-        </tr>
-        <tr>
+            <td>Bread</td>
+            <td>Bakery</td>
+            <td>24</td>
+            <td>$1.30</td>
+          </tr>
+
+          <tr>
             <td>8</td>
-            <td>Divya</td>
-            <td>21</td>
-            <td>22</td>
-            <td>22</td>
-            <td>64</td>
-            <td>86</td>
-        </tr>
-        <tr>
+            <td>Eggs (12)</td>
+            <td>Dairy</td>
+            <td>12</td>
+            <td>$2.50</td>
+          </tr>
+
+          <tr>
             <td>9</td>
-            <td>Aafrin</td>
-            <td>23</td>
-            <td>22</td>
-            <td>23</td>
-            <td>64</td>
-            <td>87</td>
-        </tr>
-        <tr>
+            <td>Rice (1kg)</td>
+            <td>Grains</td>
+            <td>30</td>
+            <td>$1.80</td>
+          </tr>
+          <tr>
             <td>10</td>
-            <td>Haseena</td>
-            <td>21</td>
-            <td>22</td>
-            <td>22</td>
-            <td>60</td>
-            <td>82</td>
-        </tr>
-    </table>
+            <td>Pasta</td>
+            <td>Grains</td>
+            <td>25</td>
+            <td>$1.10</td>
+          </tr>
+        </tbody>
+      </table>
 </body>
 </html>
