--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="#Home">Home</a>
         <a href="#About">About</a>
         <a href="#Contact">Contact</a>
+        <a href="service.html">service</a>
       </div>
       <div class="navbar-button">
          <button type="button">Sign In</button>
