--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
   </nav>
 
-  <header class="header">
+  <header class="header" id="Home">
        <div class="header-text">
           <span>We Bring Them Top Deals</span>
           <p>Find Greate Part Auto Deals For YOur Car</p>
@@ -35,8 +35,28 @@
        </div>
   </header>
     
+  <div class="about" id="About">
+    <h1>About Us</h1>
+    <div class="about-align">
+      <img src="assets/Car image.png" alt="car image"/>
+
+      <div class="about-text">
+        <span> WITH NEW ASPIRATIONS FOR EVERY GENERATION</span>
+        <p>
+          Re-defining the generation of automobiles by setting a stepping stone to follow on the league, we are the Solid automobiles, specialized in providing all automobiles services, with top quality and affordable price that makes us one of the prime choices in the market. We always strive for the client's satisfaction with ecological welfare
+        </p>
+        <p>
+          <ul type="cicle">
+            <li>The comfort and the safety you desire</li>
+            <li> Fast Car Searvice</li>
+          </ul>
+        </p>
+      </div>
+    </div>
+  </div>
    
   <section class="section">
+          
           <h1>Recent Cars</h1>
 
           <div class="section-sub">
